remove update-ca-trust from dracut

--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -74,7 +74,7 @@ jobs:
         $HOME/terraform apply -auto-approve
 
         mkdir -p overlay.d/01custom/etc/pki/ca-trust/source/anchors
-        cp matchbox-ca.crt overlay.d/01custom/etc/pki/ca-trust/source/anchors/
+        cp matchbox-ca.pem overlay.d/01custom/etc/pki/ca-trust/source/anchors/
 
     - name: Run build
       run: |
