combine trusted CA to one cert

--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -72,10 +72,10 @@ jobs:
 
         $HOME/terraform init
         $HOME/terraform apply -auto-approve
+        cat outputs/* > ca-cert.pem
 
         mkdir -p overlay.d/01custom/etc/pki/ca-trust/source/anchors
-        cp matchbox-ca.pem overlay.d/01custom/etc/pki/ca-trust/source/anchors/
-        cp minio-ca.pem overlay.d/01custom/etc/pki/ca-trust/source/anchors/
+        cp ca-cert.pem overlay.d/01custom/etc/pki/ca-trust/source/anchors/
 
     - name: Run build
       run: |
