--- a/snippets/release-coreos.yaml
+++ b/snippets/release-coreos.yaml
@@ -1,6 +1,10 @@
 releasever: 41
 ref: fedora/${releasever}/${basearch}/coreos
 
+metadata:
+  name: fedora-coreos
+  summary: Fedora CoreOS ${releasever}
+
 automatic-version-prefix: "${releasever}.<date:%Y%m%d>"
 mutate-os-release: "${releasever}"
 
