--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -23,7 +23,6 @@ jobs:
       run: |
         set -e
         cd $HOME
-
         TARGETARCH=$(arch)
         TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
 
@@ -36,9 +35,9 @@ jobs:
       run: |
         cd $HOME
         git clone --depth=1 --shallow-submodules --recurse-submodules ${{ github.server_url }}/${{ github.repository }}.git repo
+
         cd repo/fedora-coreos-config
         FEDORA_VERSION=$(cat manifest.yaml | grep releasever: | sed 's/^releasever: //')
-
         echo "FEDORA_VERSION=$FEDORA_VERSION" | sudo tee -a "$GITHUB_ENV"
         echo "BUILD_TAG=${FEDORA_VERSION}.$(date -u +'%Y%m%d.%H')" | sudo tee -a "$GITHUB_ENV"
 
@@ -48,7 +47,7 @@ jobs:
         mkdir -p overlay.d/40custom/etc/pki/ca-trust/source/anchors
         echo -e "$INTERNAL_CA_CERT" > overlay.d/40custom/etc/pki/ca-trust/source/anchors/ca-cert.pem
 
-    - name: Build keepalived override package
+    - name: Build keepalived package
       run: |
         cd $HOME
         sudo dnf install -y --setopt=install_weak_deps=False \
@@ -68,51 +67,46 @@ jobs:
           --with nftables \
           --without debug
 
-        cd $HOME
-        mkdir -p overrides/rpm
-        cp -r rpmbuild/RPMS/$(arch)/. overrides/rpm/
-
     - name: Run init
       run: |
-        cd $HOME
+        mkdir -p $HOME/build
+        cd $HOME/build
+
+        mkdir -p overrides/rpm
+        cp -r $HOME/rpmbuild/RPMS/$(arch)/. overrides/rpm/
+
         cosa init -V $VARIANT \
           --force $HOME/repo/fedora-coreos-config
 
     - name: Run fetch
       run: |
-        cd $HOME
         cosa fetch --with-cosa-overrides
 
     - name: Run build
       run: |
-        cd $HOME
         cosa build --version=$BUILD_TAG
 
     - name: Run buildextend-metal4k
       run: |
-        cd $HOME
         cosa buildextend-metal4k
 
     - name: Run buildextend-metal
       run: |
-        cd $HOME
         cosa buildextend-metal
 
     - name: Run buildextend-live
       run: |
-        cd $HOME
         cosa buildextend-live
 
     - name: Push image
       run: |
         cd $HOME
         ./mc cp -r -q --no-color \
-          builds/latest/x86_64/fedora-*-live* \
-          arc/boot/
+          build/builds/latest/$(arch)/fedora-*-live* arc/boot/
 
     - name: Create tag
       run: |
-        cd $HOME/src/config
+        cd $HOME/repo
         git config --global user.email "${{ github.actor }}@users.noreply.github.com"
         git config --global user.name "${{ github.actor }}"
         git tag -a $BUILD_TAG -m "Build $BUILD_TAG"
