add git submodule check to renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,6 +6,9 @@
   "dockerfile": {
     "enabled": false
   },
+  "git-submodules": {
+    "enabled": true
+  },
   "customManagers": [
     {
       "customType": "regex",
