--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -105,7 +105,7 @@ jobs:
     - name: Push image
       run: |
         cd $HOME
-        /tools/mc cp -r -q --no-color \
+        /minio/bin/mc cp -r -q --no-color \
           workspace/builds/latest/$(arch)/fedora-*-live* arc/boot/
 
     # TODO: support multiple archs
@@ -122,7 +122,7 @@ jobs:
     - name: Remove old images
       run: |
         cd $HOME
-        tags=$(/tools/mc ls --json --no-color arc/boot/fedora-coreos- | jq -r '.key' | sed -r 's/fedora-coreos-(.*)-live-.*$/\1/' | sort -u | head -n -$TAGS_KEEP)
+        tags=$(/minio/bin/mc ls --json --no-color arc/boot/fedora-coreos- | jq -r '.key' | sed -r 's/fedora-coreos-(.*)-live-.*$/\1/' | sort -u | head -n -$TAGS_KEEP)
         for tag in $tags; do
-          /tools/mc rm -r -q --no-color --force arc/boot/fedora-coreos-$tag
+          /minio/bin/mc rm -r -q --no-color --force arc/boot/fedora-coreos-$tag
         done
