--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -15,7 +15,7 @@ jobs:
       TAGS_KEEP: 4
     runs-on: builder-${{ github.event.repository.name }}
     container:
-      image: reg.cluster.internal/randomcoww/coreos-assembler:v43.20251024.2.0@sha256:a9a35540795278de6efbd0b6863d53cd49bdf5357343625668999576777d6479
+      image: quay.io/coreos-assembler/coreos-assembler:v43.20251024.2.0@sha256:4e8d700b1392a0aea68713f82c0fe32b6ac408abca61e73b70507e9bd758ad9d
     permissions:
       contents: write
     steps:
