minor label update

--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -19,7 +19,7 @@ jobs:
     permissions:
       contents: write
     steps:
-    - name: Setup MinIO
+    - name: Prepare tools
       run: |
         set -e
         cd $HOME
