add rpm-ostree package

--- a/manifest-custom.yaml
+++ b/manifest-custom.yaml
@@ -12,7 +12,8 @@ repos:
   - kubernetes
 
 packages:
-  - rpm
+  - rpm # works around bwrap: execvp rpm: No such file or directory
+  - rpm-ostree # address missing OSTREE_VERSION env and /usr/etc/rpm-ostreed.conf
   - vim-minimal
   - ldns-utils
   - systemd-networkd
