Revert "add rpm-ostree package"
This reverts commit 5e98820497381cf80355ef50b5c80ab98e286a44.

--- a/manifest-custom.yaml
+++ b/manifest-custom.yaml
@@ -12,8 +12,7 @@ repos:
   - kubernetes
 
 packages:
-  - rpm # works around bwrap: execvp rpm: No such file or directory
-  - rpm-ostree # address missing OSTREE_VERSION env and /usr/etc/rpm-ostreed.conf
+  - rpm
   - vim-minimal
   - ldns-utils
   - systemd-networkd
