--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -19,6 +19,11 @@ jobs:
     permissions:
       contents: write
     steps:
+    - name: Test
+      run: |
+        set -e
+        sleep inf
+
     - name: Prepare tools
       run: |
         set -e
