--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -6,7 +6,6 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  VARIANT: custom
   COSA_SUPERMIN_MEMORY: 4096
 
 jobs:
@@ -40,10 +39,9 @@ jobs:
         cd repo/fedora-coreos-config
         cp ../*.repo .
         cp ../*.yaml .
-        cp ../*.conf .
         git apply ../*.patch
 
-        FEDORA_VERSION=$(cat build-args-$VARIANT.conf | grep BASE_VERSION= | sed 's/^BASE_VERSION=//')
+        FEDORA_VERSION=$(cat build-args.conf | grep BASE_VERSION= | sed 's/^BASE_VERSION=//')
         echo "FEDORA_VERSION=$FEDORA_VERSION" | sudo tee -a "$GITHUB_ENV"
         echo "BUILD_TAG=${FEDORA_VERSION}.$(date -u +'%Y%m%d.%H')" | sudo tee -a "$GITHUB_ENV"
 
@@ -77,7 +75,7 @@ jobs:
         mkdir -p $HOME/workspace
         cd $HOME/workspace
 
-        cosa init -V $VARIANT --force $HOME/repo/fedora-coreos-config
+        cosa init --force $HOME/repo/fedora-coreos-config
         mkdir -p overrides/rpm
         cp -r $HOME/rpmbuild/RPMS/$(arch)/. overrides/rpm/
 
