--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,24 +18,13 @@
       "matchStrings": [
         "pkgs.k8s.io/core:/stable:/(?<currentValue>[\\w.]+)/rpm"
       ],
+      "versioningTemplate": "regex:v(?<major>\\d+)\\.(?<minor>\\d+)",
+      "autoReplaceStringTemplate": "pkgs.k8s.io/core:/stable:/v{{{newMajor}}}.{{{newMinor}}}/rpm",
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "kubernetes/kubernetes"
     }
   ],
   "packageRules": [
-    {
-      "matchDatasources": [
-        "github-releases",
-        "github-tags"
-      ],
-      "versioning": "docker"
-    },
-    {
-      "matchPackageNames": [
-        "kubernetes/kubernetes"
-      ],
-      "versioning": "regex:v(?<major>\\d+)\\.(?<minor>\\d+)"
-    },
     {
       "matchUpdateTypes": [
         "minor",
