--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,13 +18,25 @@
       "matchStrings": [
         "pkgs.k8s.io/core:/stable:/(?<currentValue>[\\w.]+)/rpm"
       ],
-      "versioningTemplate": "regex:v(?<major>\\d+)\\.(?<minor>\\d+)",
-      "autoReplaceStringTemplate": "pkgs.k8s.io/core:/stable:/v{{{newMajor}}}.{{{newMinor}}}/rpm",
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "kubernetes/kubernetes"
     }
   ],
   "packageRules": [
+    {
+      "matchDatasources": [
+        "github-releases",
+        "github-tags"
+      ],
+      "versioning": "docker"
+    },
+    {
+      "matchPackageNames": [
+        "kubernetes/kubernetes"
+      ],
+      "versioning": "regex:v(?<major>\\d+)\\.(?<minor>\\d+)",
+      "replacementVersionTemplate": "v{{{major}}}.{{{minor}}}"
+    },
     {
       "matchUpdateTypes": [
         "minor",
