--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -14,7 +14,7 @@ jobs:
       TAGS_KEEP: 4
     runs-on: builder-${{ github.event.repository.name }}
     container:
-      image: quay.io/coreos-assembler/coreos-assembler:latest@sha256:2cdd9cad128bdb55edb0878904ae4bd808a0722dc4098b10aceee7e59b956368
+      image: quay.io/coreos-assembler/coreos-assembler:latest
     permissions:
       contents: write
     steps:
@@ -30,37 +30,21 @@ jobs:
         mkdir -p .mc/certs/CAs
         echo -e "$INTERNAL_CA_CERT" > .mc/certs/CAs/ca.crt
 
-    # Upstream submodule becomes the root of the build. Contents of base repo are copied into the submodule path after checkout.
-    - name: Prepare repo
-      run: |
-        cd $HOME
-        git clone --depth=1 --shallow-submodules --recurse-submodules ${{ github.server_url }}/${{ github.repository }}.git repo
-
-        cd repo/fedora-coreos-config
-        cp ../*.repo .
-        cp ../*.yaml manifests/
-        git apply ../*.patch
-
-        FEDORA_VERSION=$(cat build-args.conf | grep BASE_VERSION= | sed 's/^BASE_VERSION=//')
-        echo "FEDORA_VERSION=$FEDORA_VERSION" | sudo tee -a "$GITHUB_ENV"
-        echo "BUILD_TAG=${FEDORA_VERSION}.$(date -u +'%Y%m%d.%H')" | sudo tee -a "$GITHUB_ENV"
-
-        mkdir -p overlay.d/40custom/etc/pki/ca-trust/source/anchors
-        echo -e "$INTERNAL_CA_CERT" > overlay.d/40custom/etc/pki/ca-trust/source/anchors/ca-cert.pem
-
     # Perl is blocked by upstream. Build keepalived without perl dependency.
     - name: Build keepalived package
       run: |
-        cd $HOME
         sudo dnf install -y --setopt=install_weak_deps=False \
           rpmdevtools \
           dnf-plugins-core \
           libnftnl-devel \
           unzip
 
-        mkdir -p rpmbuild/
-        cd rpmbuild
-        git clone --depth 1 -b f$FEDORA_VERSION https://src.fedoraproject.org/rpms/keepalived.git SOURCES/
+        mkdir -p $HOME/rpmbuild
+        cd $HOME/rpmbuild
+        . /etc/os-release
+
+        git clone --depth 1 -b f$VERSION_ID \
+          https://src.fedoraproject.org/rpms/keepalived.git SOURCES/
         cd SOURCES
         spectool -gR keepalived.spec
         sudo dnf builddep -y keepalived.spec
@@ -69,15 +53,29 @@ jobs:
           --with nftables \
           --without debug
 
+    # Add patch
+    - name: Add patch
+      run: |
+        cd $HOME
+        git clone --depth=1 ${{ github.server_url }}/${{ github.repository }}.git custom
+
     # COSA will remove anything existing in the build path. Run in dedicated $HOME/workspace path.
     - name: Run init
       run: |
         mkdir -p $HOME/workspace
         cd $HOME/workspace
 
-        cosa init --force $HOME/repo/fedora-coreos-config
-        mkdir -p overrides/rpm
+        cosa init https://github.com/coreos/fedora-coreos-config.git --branch testing-devel
+
+        mkdir -p src/config/overlay.d/40custom/etc/pki/ca-trust/source/anchors
+        echo -e "$INTERNAL_CA_CERT" > src/config/overlay.d/40custom/etc/pki/ca-trust/source/anchors/ca-cert.pem
+
+        FEDORA_VERSION=$(cat build-args.conf | grep BASE_VERSION= | sed 's/^BASE_VERSION=//')
+        echo "BUILD_TAG=${FEDORA_VERSION}.$(date -u +'%Y%m%d.%H')" | sudo tee -a "$GITHUB_ENV"
+
         cp -r $HOME/rpmbuild/RPMS/$(arch)/. overrides/rpm/
+        cp -r $HOME/custom/overlay/. .
+        git apply $HOME/custom/*.patch
 
     - name: Run build
       run: |
