--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,9 +18,9 @@
       "matchStrings": [
         "pkgs.k8s.io/core:/stable:/(?<currentValue>[\\w.]+)/rpm"
       ],
-      "autoReplaceStringTemplate": "pkgs.k8s.io/core:/stable:/v{{{newMajor}}}.{{{newMinor}}}/rpm",
       "datasourceTemplate": "github-releases",
-      "depNameTemplate": "kubernetes/kubernetes"
+      "depNameTemplate": "kubernetes/kubernetes",
+      "autoReplaceStringTemplate": "pkgs.k8s.io/core:/stable:/v{{newMajor}}.{{newMinor}}/rpm"
     }
   ],
   "packageRules": [
