--- a/.github/workflows/renovate-bot.yaml
+++ b/.github/workflows/renovate-bot.yaml
@@ -23,6 +23,7 @@ jobs:
         RENOVATE_AUTODISCOVER: false
         # RENOVATE_TOKEN: ${{ secrets.GITHUB_TOKEN }} # pass RENOVATE_TOKEN from runner
         RENOVATE_CONFIG_FILE: /tmp/renovate.json
+        LOG_LEVEL: debug
       run: |
         cat > $RENOVATE_CONFIG_FILE <<EOF
         {
